Near final version

--- a/serialsignificance_scripts.tex
+++ b/serialsignificance_scripts.tex
@@ -5,9 +5,10 @@
 
 % \link{  .ggb}{GeoGebra applet}
 
-% \item[R] 
+\item[R]
 
-% \link{http://www.math.unl.edu/~sdunbar1/   .R}{R script for .}
+\link{http://www.math.unl.edu/~sdunbar1/altEhrenfestOutliers.R}{R
+      script for alternative Erhenfest outliers.}
 
 \begin{lstlisting}[language=R]
 library(markovchain)
